--- a/styles/global.css
+++ b/styles/global.css
@@ -25,4 +25,15 @@
 
 body{
   overflow: hidden; /*nunca vai ter rolagem*/
+  font: var(--text);
+  color: var(--text-secondary);
+}
+
+h1, h2{
+  color: var(--text-primary);
+}
+
+img{
+  max-width: 100%;
+  height: auto;
 }
