--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -19,7 +19,7 @@ label{
   margin-bottom: .25rem;
 }
 
-input:focus, textarea:focus, select:focus, input["date"]:focus-within{
+input:focus, textarea:focus, select:focus, input[type="date"]:focus-within {
   outline: .25rem solid var(--surface-secondary);
   border: .125rem solid var(--stroke-hightlight);
   outline-offset: .1px;
